--- a/src/html/common/foot.html
+++ b/src/html/common/foot.html
@@ -1,4 +1,21 @@
+		</div><!-- /.container__content -->
 
+		<div class="container__copy container-copy">
+
+			<div class="container-copy__content">
+			
+				<div class="container-copy__title">
+					Бад. Не является лекарственным средством
+				</div><!-- /.container-copy__title -->
+
+				<div class="container-copy__text">
+					RU.77.9911.003.Е.011348.11.14 от 27.11.2014г. Представительство Корпорации «Юнифарм, Инк (США), <br>
+					115162, г. Москва, ул. Шаболовка, д.31, стр.Б, Тел. 8 (495) 995 77 67
+				</div><!-- /.container-copy__text -->
+
+			</div><!-- /.container-copy__content -->
+
+		</div><!-- /.container__copy -->
 
 	</div> <!-- end .container -->
 
