--- a/src/html/pages/quiz.html
+++ b/src/html/pages/quiz.html
@@ -1,8 +1,16 @@
-<section class="container__section section app-section" id="app-section">
+<section class="container__section section quiz">
 	
-	<div class="section__wrap app-section__wrap">
+	<div class="section__wrap">
 
-		<div id="app"></div>
+		<div class="quiz__content">
+
+			<div class="quiz__inner">
+				
+				<div id="app"></div>
+
+			</div><!-- /.quiz__inner -->			
+
+		</div><!-- /.quiz__content -->
 	
 	</div> <!-- /.app-section__wrap -->
 
