--- a/src/html/pages/competition.html
+++ b/src/html/pages/competition.html
@@ -8,6 +8,12 @@
 				Конкурс
 			</h2>
 
+			<div class="section__text text">
+				
+				<a href="vitrum-rules.html">Правила конкурса</a>
+
+			</div><!-- /.section__text text -->
+
 			<div id="app"></div><!-- /.copmetition -->
 
 		</div><!-- /.section__content -->
