--- a/src/html/pages/competition.html
+++ b/src/html/pages/competition.html
@@ -5,12 +5,29 @@
 		<div class="section__content">
 		
 			<h2 class="section__title page__title">
-				Конкурс
+				Конкурс советов!
 			</h2>
 
 			<div class="section__text text">
+				<p>
+					Оставьте свой совет о воспитании детей и помощи им в успешной учебе. 
+				</p>
 				
-				<a href="vitrum-rules.html">Правила конкурса</a>
+				<p>
+					<strong>Лучшие советы будут награждены призами! </strong>
+				</p>
+
+				<p>	
+					1-10 места: Сертификат OZON на 200 рублей и Витамины «Витрум Кидс Гамми». 
+				</p>
+
+				<p>	
+					11-40 места: Витамины «Витрум Кидс Гамми»
+				</p>
+
+				<p style="text-align: right; font-size: 14px;">					
+					<a href="vitrum-rules.html">Правила конкурса</a>
+				</p>
 
 			</div><!-- /.section__text text -->
 
