--- a/src/html/pages/competition.html
+++ b/src/html/pages/competition.html
@@ -10,11 +10,11 @@
 
 			<div class="section__text text">
 				<p>
-					Оставьте свой совет о воспитании детей и помощи им в успешной учебе. 
+					Воспитание детей — нелегкий труд, это знает каждый родитель. Но у всех есть свои маленькие хитрости и секреты, которые помогают справляться с этой непростой задачей.
 				</p>
-				
+
 				<p>
-					<strong>Лучшие советы будут награждены призами! </strong>
+					Делитесь своими советами по воспитанию и развитию детей и <strong>выигрывайте призы</strong>!
 				</p>
 
 				<p>	
