--- a/src/html/common/head.html
+++ b/src/html/common/head.html
@@ -60,7 +60,8 @@
 						</h2>
 
 						<div class="header__text">
-							Умные и полезные витамины
+							Умные и полезные витамины<br>
+							для детей с 3-х лет
 						</div><!-- /.header__text -->
 
 					</div><!-- /.header__content -->
