--- a/src/html/common/foot.html
+++ b/src/html/common/foot.html
@@ -2,11 +2,17 @@
 
 		<div class="container__copy container-copy">
 
-			<div class="container-copy__content">
-			
-				<div class="container-copy__title">
-					Бад. Не является лекарственным средством
-				</div><!-- /.container-copy__title -->
+			<div class="container-copy__content js-fly-content">
+
+				<div class="container-copy__fly js-fly">
+
+					<button type="button" class="container-copy__close button js-fly-close">&times;</button>
+				
+					<div class="container-copy__title">
+						Бад. Не является лекарственным средством
+					</div><!-- /.container-copy__title -->
+
+				</div><!-- /.container-copy__fly -->
 
 				<div class="container-copy__text">
 					RU.77.9911.003.Е.011348.11.14 от 27.11.2014г. Представительство Корпорации «Юнифарм, Инк (США), <br>
