--- a/src/html/pages/competition.html
+++ b/src/html/pages/competition.html
@@ -1,37 +1,42 @@
-<section class="container__section section">
+<section class="container__section section competition">
 	
 	<div class="section__wrap">
 
-		<div class="section__content">
+		<div class="section__content competition__content">
+
+			<div class="competition__inner">
+
+				<h2 class="section__title page__title">
+					Конкурс советов!
+				</h2>
+
+				<div class="section__text text competition__text">
+					<p>
+						Воспитание детей — нелегкий труд, это знает каждый родитель. Но у всех есть свои маленькие хитрости, которые помогают справляться с этой непростой задачей. Как убедить ребёнка принимать витамины? Как заставить ложиться спать вовремя? Как ограничивать время за компьютером? И это далеко не все вопросы, которыми каждый день задаются родители.
+
+					</p>
+
+					<p>
+						Делитесь своими советами по воспитанию и развитию детей и <strong>выигрывайте призы</strong>!
+					</p>
+
+					<p>
+						Призовой фонд: витамины «Витрум<sup class="sup">&reg;</sup> Гамми  Кидс», «Витрум<sup class="sup">&reg;</sup>» для взрослых, <br>
+						а также сертификаты Ozon!
+					</p>
+
+				</div><!-- /.section__text text -->
+
+				<div class="competition__rules text">
+					<p>
+						<a href="vitrum-rules.html">Правила конкурса</a>
+					</p>
+				</div>
+
+				<div id="app"></div><!-- /.copmetition -->
+
+			</div><!-- /.competition__inner -->
 		
-			<h2 class="section__title page__title">
-				Конкурс советов!
-			</h2>
-
-			<div class="section__text text">
-				<p>
-					Воспитание детей — нелегкий труд, это знает каждый родитель. Но у всех есть свои маленькие хитрости и секреты, которые помогают справляться с этой непростой задачей.
-				</p>
-
-				<p>
-					Делитесь своими советами по воспитанию и развитию детей и <strong>выигрывайте призы</strong>!
-				</p>
-
-				<p>	
-					1-10 места: Сертификат OZON на 2000 рублей и Витамины «Витрум Кидс Гамми». 
-				</p>
-
-				<p>	
-					11-40 места: Витамины «Витрум Кидс Гамми»
-				</p>
-
-				<p style="text-align: right; font-size: 14px;">					
-					<a href="vitrum-rules.html">Правила конкурса</a>
-				</p>
-
-			</div><!-- /.section__text text -->
-
-			<div id="app"></div><!-- /.copmetition -->
 
 		</div><!-- /.section__content -->
 	
