--- a/src/html/pages/rules.html
+++ b/src/html/pages/rules.html
@@ -4,8 +4,14 @@
 
 		<div class="section__content">
 
+			<div class="section__back-placeholder">
+				
+				<a href="vitrum-competition.html" class="section__back link">&larr; Обратно к конкурсу</a>
+
+			</div><!-- /.section__back-placeholder -->
+
 			<h2 class="section__title page__title">
-				ПОЛОЖЕНИЕ О КОНКУРСЕ &laquo;Витрум Кидс Гамми&raquo;
+				Положение о конкурсе &laquo;Витрум Кидс Гамми&raquo;
 			</h2>
 
 			<div class="section__text text">
@@ -50,8 +56,8 @@
 				<p>8.1. Правилами Конкурса предусмотрено 40 призовых мест.</p>
 				<p>8.2. Победители конкурса в качестве приза получат:</p>
 				<ul>
-					<li>1-10 места: Сертификат OZON на 200 рублей и Витамины &laquo;Витрум Кидс Гамми&raquo;.</li>
-					<li>11-40 места: Витамины &laquo;Витрум Кидс Гамми&raquo;&nbsp;</li>
+					<li>1-10 места: Сертификат OZON на 2000 рублей и Витамины &laquo;Витрум Кидс Гамми&raquo;.</li>
+					<li>11-40 места: Витамины &laquo;Витрум Кидс Гамми&raquo;&nbsp; и Витамины &laquo;Витрум&raquo; для взрослых.</li>
 				</ul>
 				<p>8.3. Победители определяются среди пользователей &laquo;Дневник.ру&raquo; с помощью экспертного жюри.</p>
 				<p>8.4. Стоимость вручаемых призов не превышает 4000 (четыре тысячи) рублей 00 коп., и может быть освобождена от налогообложения НДФЛ на основании п. 28. ст. 217 НК РФ.</p>
