back links added

--- a/src/html/pages/competition.html
+++ b/src/html/pages/competition.html
@@ -4,6 +4,8 @@
 
 		<div class="section__content competition__content">
 
+			@@include("../common/back-link.html", {})
+
 			<div class="competition__inner">
 
 				<h2 class="section__title page__title">
@@ -23,6 +25,10 @@
 					<p>
 						Призовой фонд: витамины «Витрум<sup class="sup">&reg;</sup> Гамми  Кидс», «Витрум<sup class="sup">&reg;</sup>» для взрослых, <br>
 						а также сертификаты Ozon!
+					</p>
+
+					<p>
+						Сроки проведения конкурса:  c 13.10.2016 по 13.11.2016
 					</p>
 
 				</div><!-- /.section__text text -->
