--- a/src/html/pages/quiz.html
+++ b/src/html/pages/quiz.html
@@ -4,6 +4,12 @@
 
 		<div class="quiz__content">
 
+			<div class="quiz__back">
+
+				@@include("../common/back-link.html", {})
+
+			</div><!-- /.quiz__back -->
+
 			<div class="quiz__inner">
 				
 				<div id="app"></div>
